# mad-eye

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  biome.jsonc  dobby.config.json  index.html  package.json  tsconfig.json  vite.config.ts
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml
assets/: CAPTURE.md
docs/adr/: 0001-tauri-over-swiftui.md  0002-undocumented-oauth-usage-endpoint.md  0003-never-refresh-the-oauth-token.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/eye/: CONTEXT.md  animator.rs  mod.rs  render.rs
src-tauri/src/keychain/: CONTEXT.md  mod.rs  read.rs
src-tauri/src/tray/: CONTEXT.md  mod.rs
src-tauri/src/usage/: CONTEXT.md  client.rs  mod.rs  mood.rs  types.rs
src-tauri/tests/: eye_animation.rs  usage_core.rs
src/popover/: CONTEXT.md  render.ts  snapshot.ts
