[package]
name = "mad-eye"
version = "0.1.1"
description = "Menubar Eye tracking Claude subscription usage"
authors = ["Kevin Wolf"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mad_eye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` unlocks the transparent-window background API that the
# frosted Popover needs (paired with `app.macOSPrivateApi` in tauri.conf.json).
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
# The native macOS vibrancy behind the Popover. Tauri 2.x already pins this exact
# crate internally (it backs Tauri's own window effects), so depending on it here
# adds no new transitive graph — it only lets us call `apply_vibrancy` directly
# with the `Popover` material + corner radius.
window-vibrancy = "0.6"
tiny-skia = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
security-framework = "3"

